thirdparty/boost/libs/logic/test/compile-fail/.uuid
21f448fe-6a75-45ef-8624-02a5b3e9035a